# VaulTLS

./: .dockerignore  .env.example  .gitignore  Containerfile  README.md  docker-compose.yml
.github/workflows/: agent-release.yml  docker-image.yml  hub-ntk-image.yml  test.yml
api-client/: Makefile  README.md  go.mod  go.sum
api-client/cmd/vaultls-agent/: main.go  run.go  setup.go
api-client/internal/app/: app.go  app_test.go  logging.go
api-client/internal/config/: config.go  load.go  load_test.go
api-client/internal/metrics/: metrics.go  metrics_test.go
api-client/internal/pki/: pki.go  pki_test.go
api-client/internal/reconcile/: reconcile.go  reconcile_test.go  write.go
api-client/internal/reloader/: reloader.go  reloader_test.go
api-client/internal/scheduler/: scheduler.go  scheduler_test.go
api-client/packaging/: config.example.yaml  nfpm.yaml
backend/: Cargo.toml
backend/migrations/11-import/: down.sql  up.sql
backend/migrations/12-serviceaccounts/: down.sql  up.sql
backend/migrations/13-acmeclient/: down.sql  up.sql
backend/migrations/14-acmeclientrenewal/: down.sql  up.sql
backend/migrations/15-groups/: down.sql  up.sql
backend/migrations/16-auditlog/: up.sql
backend/src/: api.rs  db.rs  dns_check.rs  helper.rs  lib.rs  metrics.rs
backend/src/acme/: admin.rs  routes.rs
backend/src/acme_client/: client.rs  mod.rs  routes.rs  types.rs
backend/src/auth/: mod.rs  oidc_auth.rs  service_auth.rs  session_auth.rs
backend/src/certs/: common.rs  import.rs  mod.rs  ssh_cert.rs  tls_cert.rs
backend/src/data/: api.rs  enums.rs  objects.rs
backend/src/notification/: notifier.rs
backend/tests/api/: api_test_audit.rs  api_test_client_api.rs  api_test_functionality.rs  api_test_groups.rs  api_test_safety.rs  api_test_service_accounts.rs  mod.rs
backend/tests/common/: helper.rs  test_client.rs
docs/: acme-client.md  observability.md
docs/specs/: frontend-redesign-linear.md  import-external-certs.md
frontend/: package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
frontend/src/: App.vue  main.ts  test-setup.ts
helm-chart/: .helmignore  Chart.yaml  README.md  values.yaml
helm-chart/templates/: NOTES.txt  _helpers.tpl  configmap-backup.yaml  cronjob-backup.yaml  deployment.yaml  ingress.yaml  pvc.yaml  secret-backup.yaml  secret.yaml  service.yaml
tests/: docker-compose.yml
tests/e2e/: Containerfile  test_01_vaultls.py  test_02_acme.py  ui_helpers.py
(+83 files in other folders)
