[package]
name = "backend"
version = "1.2.0"
edition = "2024"

[[bin]]
name = "backend"
path = "src/main.rs"

[lib]
name = "vaultls"
path = "src/lib.rs"

[profile.release]
# incremental compilation is pointless for one-shot CI/Docker builds and only
# bloats target/; rely on cargo defaults (codegen-units=16, opt-level=3, lto=off).
incremental = false

[features]
test-mode = []

[dependencies]
rocket = { version = "0.5.1", features = ["json", "secrets"] }
rocket_okapi = { version = "0.9.0", features = ["secrets"] }
scalar_api_reference = "0.2.2"
schemars = { version = "0.8.22", features = ["derive"] }
serde = "1.0.228"
serde_json = "1.0.150"
serde_repr = "0.1.20"
rusqlite = { version = "0.39.0", features = ["bundled-sqlcipher"] }
r2d2 = "0.8.10"
r2d2_sqlite = { version = "0.34.0", features = ["bundled-sqlcipher"] }
openssl = "0.10.80"
argon2 = "0.5.3"
jsonwebtoken = { version = "10.4.0", features = ["rust_crypto"] }
openidconnect = "4.0.1"
anyhow = "1.0.102"
num_enum = "0.7.6"
lettre = { version = "0.11.22", features = ["tokio1", "builder", "smtp-transport", "tokio1-native-tls"] }
maud = "0.27.0"
chrono = "0.4.44"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
passwords = "3.1.16"
include_dir = "0.7.4"
rusqlite_migration = {  version = "2.5.0", features = ["from-directory"] }
const_format = "0.2.36"
once_cell = "1.21.4"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
derive_deref = "1.1.1"
parking_lot = "0.12.5"
uuid = { version = "1.23.2", features = ["v4"] }
ssh-key = { version = "0.6.7", features = ["ed25519", "alloc", "serde", "encryption"] }
rand = "0.10.1"
zip = "8.6.0"
rand_core = "0.10.1"
reqwest = { version = "0.13.4", default-features = false, features = ["http2", "rustls"] }
hickory-resolver = { version = "0.26.1", features = ["tokio", "system-config", "tls-ring", "rustls-platform-verifier"] }
rcgen = { version = "0.14.8", features = ["pem", "x509-parser", "crypto", "aws_lc_rs"] }
instant-acme = { version = "0.8", default-features = false, features = ["aws-lc-rs", "hyper-rustls"] }
rustls = { version = "0.23", features = ["aws-lc-rs"] }
rustls-pki-types = "1.14.1"
time = "0.3.47"
base64 = "0.22.1"

[dev-dependencies]
x509-parser = "0.18.1"
rustls = { version = "0.23.40", features = ["aws-lc-rs"] }
tokio-rustls = "0.26.4"